Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130128

Wayland: Crash when nesting popups / (custom editor provided by an item delegate)

XMLWordPrintable

    • Linux/Wayland
    • 9c00d532b (dev), 098d6ac55 (6.8)

      Steps to Reproduce the Issue:

      1. Build and run the attached example project.
      2. Click on the popup button and try to modify the view by clicking on the empty fields of "Mid."
      3. The app crashes immediately after double-clicking.

        1. example.zip
          948 kB
        2. qtbug130128.zip
          6 kB
        3. Screencast from 29.10.2024 15.11.39.webm
          2.79 MB
        4. stacktrace.txt
          22 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            chakib Chakib Boutaghane
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes